welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:63: error: not found: value petale
  petale(Color.BLUE)
  ^